fix steplist overlaps header

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,7 @@ nav {
     padding: 5px;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 nav ul {
@@ -63,9 +64,8 @@ header {
 }
 
 .featured-image {
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
+    max-height: 120px;
+    object-fit: fill;
     object-position: center;
 }
 
@@ -79,9 +79,13 @@ header {
     padding: 20px;
 }
 
+.card p {
+    text-align: justify;
+}
+
 .jumbotron {
     font-size: 20px;
-    padding: 60px;
+    padding: 10px;
     background-color: #659127;
     text-align: center;
     color: white;
